spade-tests/src/snapshots/spade_tests__parser__surrounded_pipeline_depth_wrong_end.snap
---
source: spade-tests/src/parser.rs
---
entity top() -> bool {
    let abc = inst(1] e();
}


error: expected closing `)`, got `]`
  ┌─ testinput:2:21
  │
2 │     let abc = inst(1] e();
  │                   - ^ expected `)`
  │                   │  
  │                   ...to close this `(`

error: Output type mismatch. Expected bool, got ()
  ┌─ testinput:1:22
  │  
1 │   entity top() -> bool {
  │                   ---- bool type specified here
  │ ╭──────────────────────^
2 │ │     let abc = inst(1] e();
3 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: bool
               Got: ()
