spade-tests/src/snapshots/spade_tests__parser__unit_must_not_just_be_head.snap
---
source: spade-tests/src/parser.rs
---
entity foo()


error: Unexpected `end of file`, expected body or `;`
  ┌─ testinput:1:13
  │
1 │ entity foo()
  │ ------------^ Unexpected end of file
  │ │           
  │ Expected body for this entity
